<resources>
  <string name="app_name">APPInsulina</string>
  <string name="title">Title</string>
  <string name="str_foods">Foods</string>
  <string name="str_favorites">Favorites</string>
  <string name="img_desc_pizza">Pizza</string>
  <string name="str_proportion">Proportion</string>
  <string name="str_calories">Calories</string>
  <string name="str_carbohydrate">Carbohydrate</string>
  <string name="str_weight">Weight</string>
  <string name="btn_calculate_insulin">Calculate</string>
  <string name="str_before_glucose">Glucose before meal</string>
  <string name="str_after_glucose">Desired glucose after meal</string>
  <string name="str_correction_dose">Correction dose: %1$s</string>
  <string name="str_meal_dose">Meal dose: %1$s</string>
  <string name="str_total_dose">Total dose: %1$s</string>
  <string name="title_calculate_insulin">Calculate Insulin</string>
  <string name="img_back_arrow">Back arrow</string>
  <string name="txt_no_connection">No connection</string>
  <string name="saved_calc_insulin">saved_calc</string>
  <string name="img_desc_star">Favorites</string>
</resources>